[project]
name = "jaxtronomy-tutorials"
version = "0.0.1"
description = "Tutorials about JAX usage in astronomy"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "astropy",
  "ipykernel",
  "jupyter-client",
  "jax",
  "matplotlib",
  "numpy",
  "pre-commit",
  "scipy",
  "unxt"
]

[tool.uv]
package = false

[tool.ruff]
